fixed hero image for mobile, fixed scrolling gap

--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,4 @@
 
 .main-content {
   flex: 1;
-  margin-top: 70px;
 }
